--- a/condicao-comercial/condicao-comercial.html
+++ b/condicao-comercial/condicao-comercial.html
@@ -16,17 +16,21 @@
   <nav class="navbar navbar-expand-lg border-bottom shadow-sm mb-3">
     <div class="container">
       <!--LOGO-->
-      <a class="navbar-brand" href="../index.html"><strong>CRV Brazil</strong></a>
+      <a class="navbar-brand" href="/index.html"><strong>CRV Brazil</strong></a>
       <!--BOTÃO DE EXPANDIR MENU (MOBILE)-->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-expanded="false" aria-controls="collapseExample">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+        aria-expanded="false" aria-controls="collapseExample">
+        <div id="navMenu">
+          <span></span><span></span><span></span>
+        </div>
       </button>
       <!--LINKS DE NAVEGAÇÃO-->
       <div class="navbar-collapse collapse">
         <ul class="navbar-nav flex-grow-1">
           <li class="nav-item">
 
-            <a class="nav-link" target="_blank" href="https://drive.google.com/drive/folders/1GS4X6uBFDWpUAGAZ1diNRfR8M-mhgRaT">
+            <a class="nav-link" target="_blank"
+              href="https://drive.google.com/drive/folders/1GS4X6uBFDWpUAGAZ1diNRfR8M-mhgRaT">
               <i class="fa-brands fa-google-drive"></i>
               Google Drive
             </a>
@@ -38,16 +42,52 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fa-solid fa-money-check-dollar"></i>
+            <a class="nav-link" href="/condicao-comercial/condicao-comercial.html">
+              <i class="fa-solid fa-sack-dollar"></i>
               Parcelamento
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
-              <i class="fa-solid fa-cow"></i>
-              Herdoptimizer
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-list"></i>
+              Serviços
             </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" target="_blank" href="/promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
+                  <i class="fa-solid fa-cow"></i>
+                  Herdoptimizer
+                </a>
+              </li>
+              <li><a class="dropdown-item" target="_blank" href="http://rastreabilidade.crvbrasil.com.br/">
+                  <i class="fa-solid fa-file-medical"></i>
+                  Consultar Partida
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-magnifying-glass"></i>
+              Consulta Pública
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" target="_blank" href="https://www.ancp.org.br/consulta-de-touros/">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                  ANCP
+                </a>
+              </li>
+              <li><a class="dropdown-item" target="_blank"
+                  href="https://www.abcz.org.br/pmgz/consultar-avaliacoes-geneticas/deca">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                  PMGZ
+                </a>
+              </li>
+              <li><a class="dropdown-item" target="_blank" href="https://gppluson.geneplus.com.br/">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                  GENEPLUS
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -55,19 +95,20 @@
               Catálogos
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" target="_blank" href="../catalogos-de-touros/corte-zebu.pdf">
+              <li><a class="dropdown-item" target="_blank" href="/catalogos-de-touros/corte-zebu.pdf">
                   <i class="fa-solid fa-book"></i>
                   Corte Zebu
                 </a></li>
-              <li><a class="dropdown-item" target="_blank" href="../catalogos-de-touros/corte-europeu.pdf">
+              <li><a class="dropdown-item" target="_blank" href="/catalogos-de-touros/corte-europeu.pdf">
                   <i class="fa-solid fa-book"></i>
                   Corte Europeu
                 </a></li>
-              <li><a class="dropdown-item" target="_blank" href="../catalogos-de-touros/leite-zebu.pdf">
+              <hr>
+              <li><a class="dropdown-item" target="_blank" href="/catalogos-de-touros/leite-zebu.pdf">
                   <i class="fa-solid fa-book"></i>
                   Leite Zebu
                 </a></li>
-              <li><a class="dropdown-item" target="_blank" href="../catalogos-de-touros/leite-europeu.pdf">
+              <li><a class="dropdown-item" target="_blank" href="/catalogos-de-touros/leite-europeu.pdf">
                   <i class="fa-solid fa-book"></i>
                   Leite Europeu
                 </a></li>
