--- a/index.html
+++ b/index.html
@@ -43,15 +43,51 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./condicao-comercial/condicao-comercial.html">
-              <i class="fa-solid fa-money-check-dollar"></i>
+              <i class="fa-solid fa-sack-dollar"></i>
               Parcelamento
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
-              <i class="fa-solid fa-cow"></i>
-              Herdoptimizer
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-list"></i>
+              Serviços
             </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" target="_blank" href="promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
+                  <i class="fa-solid fa-cow"></i>
+                  Herdoptimizer
+                </a>
+              </li>
+              <li><a class="dropdown-item" target="_blank" href="http://rastreabilidade.crvbrasil.com.br/">
+                  <i class="fa-solid fa-file-medical"></i>
+                  Consultar Partida
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-magnifying-glass"></i>
+              Consulta Pública
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" target="_blank" href="https://www.ancp.org.br/consulta-de-touros/">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                  ANCP
+                </a>
+              </li>
+              <li><a class="dropdown-item" target="_blank"
+                  href="https://www.abcz.org.br/pmgz/consultar-avaliacoes-geneticas/deca">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                  PMGZ
+                </a>
+              </li>
+              <li><a class="dropdown-item" target="_blank" href="https://gppluson.geneplus.com.br/">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                  GENEPLUS
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -67,6 +103,7 @@
                   <i class="fa-solid fa-book"></i>
                   Corte Europeu
                 </a></li>
+              <hr>
               <li><a class="dropdown-item" target="_blank" href="./catalogos-de-touros/leite-zebu.pdf">
                   <i class="fa-solid fa-book"></i>
                   Leite Zebu
@@ -97,15 +134,13 @@
           data-bs-parent="#accordion-politica-comercial">
           <div class="accordion-body">
             <div class="d-grid gap-2 ">
-              <a href="./politicas-comerciais/SE-CORTE-ZEBU.pdf" target="_blank"
-                class="btn btn-primary">Corte Zebu</a>
-              <a href="./politicas-comerciais/SE-CORTE-EUROPEU.pdf" target="_blank"
-                class="btn btn-primary">Corte Europeu</a>
+              <a href="./politicas-comerciais/SE-CORTE-ZEBU.pdf" target="_blank" class="btn btn-primary">Corte Zebu</a>
+              <a href="./politicas-comerciais/SE-CORTE-EUROPEU.pdf" target="_blank" class="btn btn-primary">Corte
+                Europeu</a>
               <hr>
-              <a href="./politicas-comerciais/SE-LEITE-ZEBU.pdf" target=" _blank"
-                class="btn btn-primary">Leite Zebu</a>
-              <a href="./politicas-comerciais/SE-LEITE-EUROPEU.pdf" target="_blank"
-                class="btn btn-primary">Leite Europeu</a>
+              <a href="./politicas-comerciais/SE-LEITE-ZEBU.pdf" target=" _blank" class="btn btn-primary">Leite Zebu</a>
+              <a href="./politicas-comerciais/SE-LEITE-EUROPEU.pdf" target="_blank" class="btn btn-primary">Leite
+                Europeu</a>
             </div>
           </div>
         </div>
@@ -121,15 +156,13 @@
           data-bs-parent="#accordion-politica-comercial">
           <div class="accordion-body">
             <div class="d-grid gap-2 ">
-              <a href="./politicas-comerciais/EMB-CORTE-ZEBU.pdf"
-                target="_blank" class="btn btn-primary">Corte Zebu</a>
-              <a href="./politicas-comerciais/EMB-CORTE-EUROPEU.pdf"
-                target="_blank" class="btn btn-primary">Corte Europeu</a>
+              <a href="./politicas-comerciais/EMB-CORTE-ZEBU.pdf" target="_blank" class="btn btn-primary">Corte Zebu</a>
+              <a href="./politicas-comerciais/EMB-CORTE-EUROPEU.pdf" target="_blank" class="btn btn-primary">Corte
+                Europeu</a>
               <hr>
-              <a href="./politicas-comerciais/EMB-LEITE-ZEBU.pdf"
-                target="_blank" class="btn btn-primary">Leite Zebu</a>
-              <a href="./politicas-comerciais/EMB-LEITE-EUROPEU.pdf"
-                target="_blank" class="btn btn-primary">Leite Europeu</a>
+              <a href="./politicas-comerciais/EMB-LEITE-ZEBU.pdf" target="_blank" class="btn btn-primary">Leite Zebu</a>
+              <a href="./politicas-comerciais/EMB-LEITE-EUROPEU.pdf" target="_blank" class="btn btn-primary">Leite
+                Europeu</a>
             </div>
           </div>
         </div>
